[gd_scene load_steps=14 format=2]

[ext_resource path="res://pck/assets/common/panel-1.png" type="Texture" id=1]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=3]
[ext_resource path="res://pck/assets/common/btn-1.png" type="Texture" id=4]
[ext_resource path="res://pck/assets/common/panel-top.png" type="Texture" id=5]
[ext_resource path="res://pck/prefabs/Setting.gd" type="Script" id=6]

[sub_resource type="StyleBoxTexture" id=294]
texture = ExtResource( 1 )
region_rect = Rect2( 0, -10, 200, 210 )
margin_left = 60.0
margin_right = 60.0
margin_top = 80.0
margin_bottom = 60.0

[sub_resource type="DynamicFont" id=295]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 720, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 920, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=18]
resource_name = "hide"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 200, -0.25, 0, 0.25, 0, 920, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=19]
resource_name = "show"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 920, -0.25, 0, 0.25, 0, 200, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="Setting" type="Panel"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 720.0
margin_top = 920.0
margin_right = 1280.0
margin_bottom = 1340.0
custom_styles/panel = SubResource( 294 )
script = ExtResource( 6 )

[node name="Panel-top" type="Sprite" parent="."]
position = Vector2( 276, 92 )
scale = Vector2( 1.08108, 1 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Panel-top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -259.0
margin_top = -66.0
margin_right = -259.0
margin_bottom = -84.0
custom_fonts/font = SubResource( 295 )
text = "Setting"
align = 1
valign = 1

[node name="SliderMusic" type="HSlider" parent="."]
margin_left = 180.0
margin_top = 140.0
margin_right = 350.0
margin_bottom = 160.0
rect_scale = Vector2( 2, 2 )
min_value = -50.0
max_value = 0.0

[node name="SliderEffect" type="HSlider" parent="."]
margin_left = 180.0
margin_top = 220.0
margin_right = 350.0
margin_bottom = 240.0
rect_scale = Vector2( 2, 2 )
min_value = -50.0
max_value = 0.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -260.0
margin_top = 140.0
margin_right = -100.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 15 )
text = "ေတးဂီတ"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -260.0
margin_top = 220.0
margin_right = -100.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 15 )
text = "ဂိမ္းအသံ"
align = 1
valign = 1

[node name="Submit" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 300.0
margin_right = 416.0
margin_bottom = 380.0
texture_normal = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Submit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 16 )
text = "သိမ္းမည္"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/hide = SubResource( 18 )
anims/show = SubResource( 19 )

[connection signal="value_changed" from="SliderMusic" to="." method="_on_SliderMusic_value_changed"]
[connection signal="value_changed" from="SliderEffect" to="." method="_on_SliderEffect_value_changed"]
[connection signal="mouse_entered" from="Submit" to="." method="_on_Submit_mouse_entered"]
[connection signal="mouse_exited" from="Submit" to="." method="_on_Submit_mouse_exited"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
